--- a/index.html
+++ b/index.html
@@ -204,15 +204,15 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I've been coding <a href="https://github.com/StephenJayYoung">Every.Single.Day</a> for the last year, and I haven't gotten sick of it yet. I got my start at Portland Code School (link), and since then, I've taken a number of classes, read nerdy books, worked on projects for various clients, and taught students the ways of JavaScript and other languages, tools, and frameworks. This stuff is fun, and using it in a way that helps people makes it even funner. </p>
+                    <p><b> My Coding Roots: </b>I've been coding <a href="https://github.com/StephenJayYoung">Every.Single.Day</a> for the last year, and I haven't gotten sick of it yet. I got my start at Portland Code School (link), and since then, I've taken a number of classes, read nerdy books, worked on projects for various clients, and taught students the ways of JavaScript and other languages, tools, and frameworks. This stuff is fun, and using it in a way that helps people makes it even funner. </p>
                 </div>
                 <div class="col-lg-4">
-                    <p> I like to make things that help people. My mission as a developer (and as a person) is to help build meaningful communities - so that the people involved in them can be more fulfilled, productive and happier. Check out my resume below to see some of the projects I've been working on.
+                    <p><b>My Mission: </b>I like to make things that help people. My goal as a developer (and as a person) is to help build meaningful communities - so that the people involved in them can be more fulfilled, productive and happier. Check out my resume below to see some of the projects I've been working on.
                     </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
+                        <i class="fa fa-download"></i> View Resume
                     </a>
                 </div>
             </div>
