--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     </section>
 
     <!-- About Section -->
-<!--     <section id="about">
+    <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -192,7 +192,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
         <!-- About Section 2-->
     <section class="success" id="about">
