--- a/index.html
+++ b/index.html
@@ -182,18 +182,6 @@
         </div>
     </section>
 
-    <!-- About Section -->
-<!--     <section id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</h3>
-                </div>
-            </div>
-        </div>
-    </section> -->
-
         <!-- About Section 2-->
     <section class="success" id="about">
         <div class="container">
@@ -207,7 +195,7 @@
                     <p><b> My Coding Roots: </b>I've been coding <a href="https://github.com/StephenJayYoung">Every.Single.Day</a> for the last year, and I haven't even come close to getting sick of it. I got my start at <a href="http://www.portlandcodeschool.com/">Portland Code School</a>, and since then, I've taken a number of classes, read nerdy books, worked on projects for various clients, and taught students the ways of JavaScript and other languages, tools and frameworks. </p>
                 </div>
                 <div class="col-lg-4">
-                    <p><b>My Mission: </b>My goal as a developer (and as a person) is to help build meaningful communities - so that the people involved in them can feel more fulfilled, be more productive, and become happier human beings. Check out my resume below to get a feel for how I've gone about doing this, or click on the links above to view some of the projects I've been working on.
+                    <p><b>My Mission: </b>My goal as a developer (and as a person) is to help build meaningful communities - so that the people involved in them can feel more fulfilled, be more productive, and become happier human beings. Check out my resume below to get a feel for how I've gone about doing this, or click on the links above to view some of the projects I've been working on!
                     </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -241,7 +229,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Contact Me</h2>
+                    <h2 class="section-heading"><a href="#">About</a>Contact Me</h2>
                     <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
                 </div>
             </div>
